屏蔽git；增强文件预览功能；